Attempt to fix error of no css on post

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <meta property="og:title" content="Cyber Student" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://example.org/" />
+<meta property="og:url" content="" />
 
 
   <meta name="twitter:card" content="summary"/>
@@ -33,7 +33,7 @@
   
 
   
-<link rel="icon" type="image/png" href="http://example.org/images/favicon.ico" />
+<link rel="icon" type="image/png" href="images/favicon.ico" />
 
   
   
@@ -43,9 +43,9 @@
   <div class="content index py4">
 
     <header id="header">
-  <a href="http://example.org/">
+  <a href="">
   
-    <div id="logo" style="background-image: url(http://example.org/images/logo.png)"></div>
+    <div id="logo" style="background-image: images/logo.png"></div>
   
   <div id="title">
     <h1>Cyber Student</h1>
@@ -70,7 +70,7 @@
   </section>
 
   <section id="writing">
-    <span class="h1"><a href="http://example.org/">Writings</a></span>
+    <span class="h1"><a href="">Writings</a></span>
     
 
     
