--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
   
   
   
-  <link rel="stylesheet" href="css/style-white.css">
+  <link rel="stylesheet" href="/css/style-white.css">
   
   
   
